# full_stack_template

./: .gitignore  nginx.conf
backend/: README.md  alembic.ini  dev.py  pyproject.toml
backend/app/: auth.py  data_type.py  main.py  settings.py
backend/app/routes/: auth.py  index.py  user.py
backend/data/: __init__.py  dbmodel.py  project.py  user.py
backend/utils/: __init__.py  common.py  crypto.py
frontend/: package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: api.ts  user.ts
frontend/src/assets/locales/: zh_CN.json
frontend/src/pages/: Admin.tsx  Login.tsx  UserDetail.tsx  UserList.tsx  dashboard.tsx  userList.tsx
frontend/src/store/: userStore.ts
frontend/src/types/: admin.ts  common.ts
frontend/src/utils/: requireAuth.tsx
