[project]
name = "web-server"
version = "0.1.0"
description = "blacksheep web server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "blacksheep-sqlalchemy>=0.0.3",
    "blacksheep[full]>=2.0.7",
    "httpx>=0.28.1",
    "orjson>=3.10.13",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "rich>=13.9.4",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
 "pytest>=7.4.4",
 "pytest-asyncio>=0.23.5",
]
